k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fiap-mecanica
  labels:
    app: fiap-mecanica
    environment: production
