k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fiap-mecanica
  labels:
    app: fiap-mecanica
