k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fiap-mecanica-app
  namespace: fiap-mecanica
  labels:
    app: fiap-mecanica-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fiap-mecanica-app
  template:
    metadata:
      labels:
        app: fiap-mecanica-app
    spec:
      containers:
        - name: app
          image: fiap-mecanica:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /api/v1/health
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /api/v1/health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
