k8s/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fiap-mecanica-service
  namespace: fiap-mecanica
  labels:
    app: fiap-mecanica-api
spec:
  type: ClusterIP
  selector:
    app: fiap-mecanica-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
