k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fiap-mecanica-service
  namespace: fiap-mecanica
  labels:
    app: fiap-mecanica-app
spec:
  type: NodePort
  selector:
    app: fiap-mecanica-app
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30000
      protocol: TCP
