k8s/07-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fiap-mecanica-ingress
  namespace: fiap-mecanica
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.fiap-mecanica.com
      secretName: fiap-mecanica-tls
  rules:
    - host: api.fiap-mecanica.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fiap-mecanica-service
                port:
                  number: 80
